--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -59,37 +59,37 @@
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-9 future-section future-page" data-id="__page-5">
 				<h3 id="text-8" contenteditable="true">他总是能够轻松的应对</h3>
-				<img src="a/iali5.jpg">
+				<img src="a/6.jpg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-10 future-section future-page" data-id="__page-6">
 				<h3 id="text-9" contenteditable="true">并且面带阳光、自信的笑容</h3>
-				<img src="a/iali22.jpg">
+				<img src="a/7.jpg">
 			</div>
 		</div>
 		<div id="" data-prog="__3" class="ft-section section-3" data-id="__section-3">
 			<div data-prog="__1" id="" class="ft-page page-11 full-img future-section" data-id="__page-1">
 				<h3 id="text-10" contenteditable="true">生活也不会总是一帆风顺</h3>
-				<img src="a/iali24.jpg">
+				<img src="a/8.jpg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-12 future-section future-page" data-id="__page-2">
 				<h3><span id="text-11" contenteditable="true">但他每次都能勇敢的面对</span><br><span id="text-12" contenteditable="true">随时准备接受生活的挑战</span></h3>
-				<img src="a/iali25.jpg">
+				<img src="a/9.jpg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-13 future-section future-page" data-id="__page-3">
-				<img src="a/iali64.jpg" alt="可是小明的爱情又在哪里呢？">
+				<img src="a/10.jpg" alt="可是小明的爱情又在哪里呢？">
 				<h3 id="text-13" contenteditable="true">可是他的爱情又在哪里呢？</h3>
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-14 left-img future-section future-page" data-id="__page-4">
 				<h3 id="text-14" contenteditable="true">在镜子里面吗？他不敢相信</h3>
-				<img src="a/iali46.jpg">
+				<img src="a/11.jpg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-15 left-img future-section future-page" data-id="__page-5">
 				<h3><span id="text-15" contenteditable="true">他去问大树，我的爱情在哪里？</span><br><span id="text-16" contenteditable="true">大树告诉他，也许就在不远的地方</span></h3>
-				<img src="a/iali45.jpg">
+				<img src="a/12.jpg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-16 left-img future-section future-page" data-id="__page-6">
 				<h3><span id="text-17" contenteditable="true">于是，他一个人继续向前走</span><br><span id="text-18" contenteditable="true">走在茫茫的雪地上</span></h3>
-				<img src="a/iali66.jpg">
+				<img src="a/13.jpg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-17 top-text future-section future-page" data-id="__page-7">
 				<h3 id="text-19" contenteditable="true">直到有一天他与她相遇了</h3>
