--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -33,7 +33,7 @@
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-3 left-img future-page" data-id="__page-3">
 				<h2 class="text" id="text-2" contenteditable="true">一个人的长廊</h2>
-				<img src="a/1.jpg" alt="一个人的长廊">
+				<img src="a/1.jpeg" alt="一个人的长廊">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-4 full-img future-page" data-id="__page-4">
 				<h2 class="center-text" id="text-3" contenteditable="true">一个人的山岗</h2>
@@ -93,133 +93,133 @@
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-17 top-text future-section future-page" data-id="__page-7">
 				<h3 id="text-19" contenteditable="true">直到有一天他与她相遇了</h3>
-				<img src="a/iali16.jpg">
+				<img src="a/14.jpg">
 			</div>
 		</div>
 		<div id="" data-prog="__4" class="ft-section section-4" data-id="__section-4">
 			<div data-prog="__1" id="" class="ft-page page-18 full-img future-section" data-id="__page-1">
 				<p class="text" id="text-20" contenteditable="true">他喜欢大，因为她的出现，他脸上有了更加灿烂的笑容</p>
-				<img src="a/iali11.jpg">
+				<img src="a/15.jpg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-19 future-section future-page" data-id="__page-2">
 				<h3 id="text-21" contenteditable="true">可是她会喜欢他吗？</h3>
-				<img src="a/iali75.jpg">
+				<img src="a/16.jpg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-20 future-section future-page" data-id="__page-3">
 				<img src="a/iali59.png" tppabs="http://kingzs70.oss.aliyuncs.com/iali/img/iali59.png">
 				<h3 id="text-22" contenteditable="true">终于有一天，他鼓起了勇气</h3>
-				<img src="a/iali9.jpg">
+				<img src="a/17.jpg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-21 future-section future-page" data-id="__page-4">
 				<h3 id="text-23" contenteditable="true">他好高兴</h3>
-				<img src="a/iali59_002.png">
+				<img src="a/18.jpg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-22 left-img future-section future-page" data-id="__page-5">
 				<h3 id="text-24" contenteditable="true">每天他都会去找她</h3>
-				<img src="a/iali4.jpg">
+				<img src="a/19.jpg.jpg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-23 left-img future-section future-page" data-id="__page-6">
 				<h3 id="text-25" contenteditable="true">然后两个人一起出去玩</h3>
-				<img src="a/iali44.jpg">
+				<img src="a/20.jpg.jpg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-24 full-img future-section future-page" data-id="__page-7">	
 				<h3 id="text-26" contenteditable="true">晚上他会把她送回家</h3>
-				<img src="a/iali32.jpg">
+				<img src="a/21.jpg">
 			</div>
 		</div>
 		<div id="" data-prog="__5" class="ft-section section-5" data-id="__section-5">
 			<div data-prog="__1" id="" class="ft-page page-25 left-img future-section" data-id="__page-1">
 				<h3><span id="text-27" contenteditable="true">直到很晚</span><br><span id="text-28" contenteditable="true">他才会一个人回家</span></h3>
-				<img src="a/iali37.jpg">
+				<img src="a/22.jpeg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-26 top-text future-section future-page" data-id="__page-2">
 				<h3 id="text-29" contenteditable="true">然后高兴地进入梦乡，希望梦到她</h3>
-				<img src="a/iali10.gif">
+				<img src="a/23.jpeg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-27 future-section future-page" data-id="__page-3">
 				<h3 id="text-30" contenteditable="true">他很快就成为了她的逛街助手</h3>
-				<img src="a/iali67.jpg">
+				<img src="a/24.jpeg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-28 future-section future-page" data-id="__page-4">
 				<h3 id="text-31" contenteditable="true">他和她一起去了好多地方玩</h3>
-				<img src="a/iali40.jpg">
+				<img src="a/25.jpeg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-29 future-section future-page" data-id="__page-5">
 				<h3 id="text-32" contenteditable="true">他也和她一样成为了一个吃货</h3>
-				<img src="a/iali12.jpg">
+				<img src="a/26.jpeg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-30 future-section future-page" data-id="__page-6">
 				<h3 id="text-33" contenteditable="true">后来，他们搬到了一起</h3>
-				<img src="a/iali76.gif">
+				<img src="a/27.jpeg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-31 future-section future-page" data-id="__page-7">
 				<h3 id="text-34" contenteditable="true">于是他开始学习新的技能</h3>
-				<img src="a/iali77.jpg">
+				<img src="a/28.jpeg">
 			</div>
 		</div>
 		<div id="" data-prog="__6" class="ft-section section-6" data-id="__section-6">
 			<div data-prog="__1" id="" class="ft-page page-32 future-section" data-id="__page-1">
 				<h3 id="text-35" contenteditable="true">煮饭</h3>
-				<img src="a/iali62.jpg">
+				<img src="a/29.jpeg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-33 top-text future-section future-page" data-id="__page-2">
 				<h3 id="text-36" contenteditable="true">每天早上，他们吃着自己做的美食</h3>
-				<img src="a/iali3.jpg">
+				<img src="a/30.jpeg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-34 left-img future-section future-page" data-id="__page-3">
 				<h3 id="text-37" contenteditable="true">然后在同一个站台，高高兴兴的一起上班</h3>
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-35 future-section future-page" data-id="__page-4">
 				<h3><span id="text-38" contenteditable="true">他感觉自己好幸福。</span><br><span id="text-39" contenteditable="true">因为自己有了家</span><br><span id="text-40" contenteditable="true">那个有她在的地方</span></h3>
-				<img src="a/iali8.gif">
+				<img src="a/31.jpeg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-36 full-img future-section future-page" data-id="__page-5">
 				<h3 id="text-41" contenteditable="true">他们偶尔也会吵架</h3>
-				<img src="a/iali31.jpg">
+				<img src="a/32.jpeg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-37 left-img future-section future-page" data-id="__page-6">
 				<h3 id="text-42" contenteditable="true">他不想这样</h3>
-				<img src="a/iali49.jpg">
+				<img src="a/33.jpeg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-38 bottom-text future-section future-page" data-id="__page-7">
-				<img src="a/iali21.jpg">
+				<img src="a/34.jpeg">
 				<h3 id="text-43" contenteditable="true">一定是我有什么做的不对，他在想</h3>
 			</div>
 		</div>
 		<div id="" data-prog="__7" class="ft-section section-7" data-id="__section-7">
 			<div data-prog="__1" id="" class="ft-page page-39 left-img future-section" data-id="__page-1">
 				<h3 id="text-44" contenteditable="true">如果没有她在身边，窗外就没有风景</h3>
-				<img src="a/iali2.jpg">
+				<img src="a/35.jpeg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-40 future-section future-page" data-id="__page-2">
 				<h3 id="text-45" contenteditable="true">如果没有她在身后</h3>
-				<img src="a/iali14.jpg">
+				<img src="a/36.jpeg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-41 future-section future-page" data-id="__page-3">
-				<img src="a/iali30_1.jpg" class="img1">
-				<img src="a/iali30_2.jpg" class="img2">
+				<img src="a/37.jpeg" class="img1">
+				<img src="a/38.jpg" class="img2">
 				<h3 id="text-46" contenteditable="true"> 他又怎会飞的更高更远</h3>
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-42 future-section future-page" data-id="__page-4">
 				<h3><span id="text-47" contenteditable="true">他不想这样。他要为她改变自己</span><br><span id="text-48" contenteditable="true">她说她喜欢狮子座的人，于是他许下愿望</span></h3>
-				<img src="a/iali69.jpg">
+				<img src="39.jpeg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-43 future-section future-page" data-id="__page-5">
-				<img src="a/iali42.jpg">
+				<img src="a/41.jpeg">
 				<h3 id="text-49" contenteditable="true">我愿为你变成狮子座</h3>
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-44 left-img future-section future-page" data-id="__page-6">
 				<h3><span id="text-50" contenteditable="true">爱情就像花草一样</span><br><span id="text-51" contenteditable="true">需要用包容来浇灌</span></h3>
-				<img src="a/iali0.jpg">
+				<img src="a/42.jpeg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-45 left-img future-section future-page" data-id="__page-7">
 				<h3><span id="text-52" contenteditable="true">再到后来，她要过生日了</span><br><span id="text-53" contenteditable="true">他开始为她准备礼物</span></h3>
-				<img src="a/iali18.jpg">
+				<img src="a/43.jpeg">
 			</div>
 		</div>
 		<div id="" data-prog="__8" class="ft-section section-8" data-id="__section-8">
 			<div data-prog="__1" id="" class="ft-page page-46 future-section" data-id="__page-1">
-				<img src="a/iali57.gif">
+				<img src="a/44.jpeg">
 				<h3>
 					<span id="text-54" contenteditable="true">看着礼物一件件准备好了</span>
 					<span id="text-55" contenteditable="true">他好开心</span>
@@ -228,7 +228,7 @@
 				</h3>
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-47 top-text future-section future-page" data-id="__page-2">
-				<img src="a/iali58.jpg">
+				<img src="a/45.jpeg">
 				<h3>
 					<span id="text-58" contenteditable="true">想想后面还有一辈子</span>
 					<span id="text-59" contenteditable="true">他好开心</span>
@@ -238,10 +238,10 @@
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-48 left-img future-section future-page" data-id="__page-3">
 				<p><span id="text-62" contenteditable="true">他也会继续努力</span><br><span id="text-63" contenteditable="true">为了他和她的梦之城堡</span></p>
-				<img src="a/iali65.jpg">
+				<img src="a/46.jpeg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-49 full-img future-section future-page" data-id="__page-4">
-			<img src="a/iali71.jpg">
+			<img src="a/47.jpeg">
 				<p class="text">
 					<span class="text" id="text-64" contenteditable="true">他很幸福，因为他找到了她。他相信后面的每天都会是快乐的</span><br>
 					<span class="text" id="text-65" contenteditable="true">简简单单，体会着与她在一起的每一个刻</span>
@@ -249,8 +249,8 @@
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-50 future-section future-page" data-id="__page-5">
 				<p class="text" id="text-66" contenteditable="true">后来的一天，她说她不敢坐山车了，于是他就带她到别的地方玩。这只是他们幸福生活中的一件小事，小到无法引起别人的注意。可这是属于他和她的幸福生活。</p>
-				<img src="a/iali50_1.jpg" class="img1">
-				<img src="a/iali50_2.jpg" class="img2">
+				<img src="a/48.jpeg" class="img1">
+				<img src="a/49.jpeg" class="img2">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-51 future-section future-page" data-id="__page-6">
 				<p>
@@ -264,18 +264,18 @@
 		<div id="" data-prog="__9" class="ft-section section-9" data-id="__section-9">
 			<div data-prog="__1" id="" class="ft-page page-52 full-img future-section" data-id="__page-1">
 				<h3 id="text-71" contenteditable="true">愿得一人心，白首不相离</h3>
-				<img src="a/iali20.jpg">
+				<img src="a/50.jpeg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-53 future-section future-page" data-id="__page-2">
-				<img src="a/iali68.jpg" alt="happy birthday">
+				<img src="a/51.jpeg" alt="happy birthday">
 				<h6 id="text-72" contenteditable="true">动力节点</h6>
 				<h3 id="text-72" contenteditable="true">520快乐</h3>
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-54 center-img future-section future-page" data-id="__page-3">
-				<img src="a/iali68.jpg" alt="happy birthday">
+				<img src="a/53.jpeg" alt="happy birthday">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-55 right-img future-section future-page" data-id="__page-4">
-				<img src="a/14915.jpg">
+				<img src="a/57.jpeg">
 				<p class="text">
 					<span id="text-73" contenteditable="true">他和她的故事会一直继续下去。</span><br>
 					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的。</span><br>
