--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!--[if IE 6]>
 <html id="ie6" class="ie ie6 lt-ie9">
 <![endif]-->
@@ -24,55 +24,55 @@
 	<div style="transform: translateX(0%) translateY(0%);" class="flowtime no-transition">
 		<div id="" data-prog="__1" class="ft-section section-1" data-id="__section-1">
 			<div data-prog="__1" id="" class="ft-page page-1 hilite actual" data-id="__page-1">
-				<p class="text1"><span id="text-75" contenteditable="true">佳</span> ❤ <span id="text-76" contenteditable="true">璇</span> <span id="text-77" contenteditable="true">生日快乐</span></p>
+				<p class="text1"><span id="text-75" contenteditable="true">佳</span> ❤ <span id="text-76" contenteditable="true">璇</span> <span id="text-77" contenteditable="true">生日快乐。</span></p>
 				<p class="text2">按键盘 "↓" <span id="text-78" contenteditable="true">开始浪漫之旅</span></p>
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-2 future-page" data-id="__page-2">
-				<p class="top-text" id="text-1" contenteditable="true">过去的他一直是一个人生活，享受着孤独，也憧憬着爱情。</p>
-				<img src="https://chancedxdl.github.io/jxbirthdayphoto/bg.jpg" alt="过去的小明一直是一个人生活，享受着孤独，也憧憬着爱情。">
+				<p class="top-text" id="text-1" contenteditable="true">又是一年寒冬时，我们的佳璇迎来了19岁的生日</p>
+				<img src="a/22.jpeg" alt="啊">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-3 left-img future-page" data-id="__page-3">
-				<h2 class="text" id="text-2" contenteditable="true">一个人的长廊</h2>
-				<img src="a/1.jpeg" alt="一个人的长廊">
+				<h2 class="text" id="text-2" contenteditable="true">18岁的你美丽天真可爱优秀</h2>
+				<img src="a/1.jpeg" alt="18岁的你美丽天真可爱优秀">
 			</div>
-			<div data-prog="__4" id="" class="ft-page page-4 full-img future-page" data-id="__page-4">
-				<h2 class="center-text" id="text-3" contenteditable="true">一个人的山岗</h2>
-				<img src="a/2.jpg" alt="一个人的山岗">
+			<div data-prog="__4" id="" class="ft-page page-4 right-img future-page" data-id="__page-4">
+				<h2 class="text" id="text-3" contenteditable="true">幸运的是一直陪伴你左右。</h2>
+				<img src="a/2.jpg" alt="幸运的是一直陪伴你左右。">
 			</div>
 		</div>
 		<div id="" data-prog="__2" class="ft-section section-2" data-id="__section-2">
-			<div data-prog="__1" id="" class="ft-page page-5 full-img future-section" data-id="__page-1">
-				<h2 class="center-text" id="text-4" contenteditable="true">一个人的地铁</h2>
-				<img src="a/3.jpg" alt="一个人的地铁">
+			<div data-prog="__1" id="" class="ft-page page-5  future-section" data-id="__page-1">
+				<h2 class="center-text" id="text-4" contenteditable="true">见证着你的经历和故事，分享着你的快乐与幸福。</h2>
+				<img src="a/3.jpg" alt="见证">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-6 future-section future-page" data-id="__page-2">
-				<h2 class="center-text" id="text-5" contenteditable="true">一个人的游乐场</h2>
+				<h2 class="center-text" id="text-5" contenteditable="true">适应了大学忙碌的生活</h2>
 				<img src="a/4.jpg" alt="一个人的游乐场">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-7 future-section future-page" data-id="__page-3">
-				<h3 id="text-6" contenteditable="true">但他依然乐观，微笑着，等待着</h3>
+				<h3 id="text-6" contenteditable="true">我们都拥有理想，目标明确。</h3>
 				<img src="a/5.jpg" alt="但他依然乐观，微笑着，等待着">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-8 full-img future-section future-page" data-id="__page-4">
-				<h3 id="text-7" contenteditable="true">生活难免有风风雨雨</h3>
+				<h3 id="text-7" contenteditable="true">我们都在充分利用时光，做自己喜欢做的事。</h3>
 				<img src="a/6.jpg" alt="生活难免有风风雨雨">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-9 future-section future-page" data-id="__page-5">
-				<h3 id="text-8" contenteditable="true">他总是能够轻松的应对</h3>
+				<h3 id="text-8" contenteditable="true">我们都在追赶时光，做自己想完成的事。</h3>
 				<img src="a/6.jpg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-10 future-section future-page" data-id="__page-6">
-				<h3 id="text-9" contenteditable="true">并且面带阳光、自信的笑容</h3>
+				<h3 id="text-9" contenteditable="true">我们都积极，阳光，自信，向上。</h3>
 				<img src="a/7.jpg">
 			</div>
 		</div>
 		<div id="" data-prog="__3" class="ft-section section-3" data-id="__section-3">
 			<div data-prog="__1" id="" class="ft-page page-11 full-img future-section" data-id="__page-1">
-				<h3 id="text-10" contenteditable="true">生活也不会总是一帆风顺</h3>
+				<h3 id="text-10" contenteditable="true">每每想起奋斗的路途上还有你，我都会嘴角上扬。</h3>
 				<img src="a/8.jpg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-12 future-section future-page" data-id="__page-2">
-				<h3><span id="text-11" contenteditable="true">但他每次都能勇敢的面对</span><br><span id="text-12" contenteditable="true">随时准备接受生活的挑战</span></h3>
+				<h3><span id="text-11" contenteditable="true">感谢你出现在这个世上，</span><br><span id="text-12" contenteditable="true">让我相信一切美好。</span></h3>
 				<img src="a/9.jpg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-13 future-section future-page" data-id="__page-3">
@@ -230,46 +230,46 @@
 			<div data-prog="__2" id="" class="ft-page page-47 top-text future-section future-page" data-id="__page-2">
 				<img src="a/45.jpeg">
 				<h3>
-					<span id="text-58" contenteditable="true">想想后面还有一辈子</span>
-					<span id="text-59" contenteditable="true">他好开心</span>
-					<span id="text-60" contenteditable="true">因为可以和她</span>
-					<span id="text-61" contenteditable="true">去全世界好多地方玩</span></h3>
+					<span id="text-58" contenteditable="true">愿你的心灵纯净永远。</span>
+					<span id="text-59" contenteditable="true">前途光明，生活美满。</span>
+					<span id="text-60" contenteditable="true">愿你的笑容灿烂永远。</span>
+					<span id="text-61" contenteditable="true">前路平坦，此生绚烂。</span></h3>
 				
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-48 left-img future-section future-page" data-id="__page-3">
-				<p><span id="text-62" contenteditable="true">他也会继续努力</span><br><span id="text-63" contenteditable="true">为了他和她的梦之城堡</span></p>
+				<p><span id="text-62" contenteditable="true">去做光芒万丈，不枉众生喜欢，活成你想要的模样。</span><br><span id="text-63" contenteditable="true">去做灿烂星光，负责众人仰望，追寻你自己的理想。</span></p>
 				<img src="a/46.jpeg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-49 full-img future-section future-page" data-id="__page-4">
 			<img src="a/47.jpeg">
 				<p class="text">
-					<span class="text" id="text-64" contenteditable="true">他很幸福，因为他找到了她。他相信后面的每天都会是快乐的</span><br>
-					<span class="text" id="text-65" contenteditable="true">简简单单，体会着与她在一起的每一个刻</span>
+					<span class="text" id="text-64" contenteditable="true">愿生活里有热汤和甜食。</span><br>
+					<span class="text" id="text-65" contenteditable="true">内心里有诗和远方。</span>
 				</p>
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-50 future-section future-page" data-id="__page-5">
-				<p class="text" id="text-66" contenteditable="true">后来的一天，她说她不敢坐山车了，于是他就带她到别的地方玩。这只是他们幸福生活中的一件小事，小到无法引起别人的注意。可这是属于他和她的幸福生活。</p>
+				<p class="text" id="text-66" contenteditable="true">想让你的周围充满给予你喜欢，温暖，陪伴，理解与包容的人。</p>
 				<img src="a/48.jpeg" class="img1">
 				<img src="a/49.jpeg" class="img2">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-51 future-section future-page" data-id="__page-6">
 				<p>
-					<span id="text-67" contenteditable="true">她：永远有多远？</span><br>
-					<span id="text-68" contenteditable="true">他：比时间多一秒就是永远，我会永远爱你</span><br>
-					<span id="text-69" contenteditable="true">她：世界有多大？</span><br>
-					<span id="text-70" contenteditable="true">他：你走到哪里，世界就有多大</span>
+					<span id="text-67" contenteditable="true">左右，我们是都在的。</span><br>
+					<span id="text-68" contenteditable="true">左右，你做什么我都是支持和肯定的。</span><br>
+					<span id="text-69" contenteditable="true">I would share my sadness with you.But just a little.</span><br>
+					<span id="text-70" contenteditable="true">I prefer to share my happiness with you.Even wish you could feel happy as I felt.</span>
 					</p>
 			</div>
 		</div>
 		<div id="" data-prog="__9" class="ft-section section-9" data-id="__section-9">
 			<div data-prog="__1" id="" class="ft-page page-52 full-img future-section" data-id="__page-1">
-				<h3 id="text-71" contenteditable="true">愿得一人心，白首不相离</h3>
+				<h3 id="text-71" contenteditable="true">愿世界美好与你环环相扣</h3>
 				<img src="a/50.jpeg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-53 future-section future-page" data-id="__page-2">
-				<img src="a/51.jpeg" alt="happy birthday">
-				<h6 id="text-72" contenteditable="true">动力节点</h6>
-				<h3 id="text-72" contenteditable="true">520快乐</h3>
+				<img src="a/62.jpeg" alt="happy birthday">
+				<h6 id="text-72" contenteditable="true">如果这一切都太难，那就简单的送你</h6>
+				<h3 id="text-72" contenteditable="true">一直有我</h3>
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-54 center-img future-section future-page" data-id="__page-3">
 				<img src="a/53.jpeg" alt="happy birthday">
@@ -277,8 +277,8 @@
 			<div data-prog="__4" id="" class="ft-page page-55 right-img future-section future-page" data-id="__page-4">
 				<img src="a/57.jpeg">
 				<p class="text">
-					<span id="text-73" contenteditable="true">他和她的故事会一直继续下去。</span><br>
-					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的。</span><br>
+					<span id="text-73" contenteditable="true">生日快乐，我的人间理想</span><br>
+					<span id="text-74" contenteditable="true">满树繁花，你是心之所向。</span><br>
 					<br>
 					<br>
 					
