--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -53,7 +53,7 @@
 				<h3 id="text-6" contenteditable="true">我们都拥有理想，目标明确。</h3>
 				<img src="a/5.jpg" alt="但他依然乐观，微笑着，等待着">
 			</div>
-			<div data-prog="__4" id="" class="ft-page page-8 full-img future-section future-page" data-id="__page-4">
+			<div data-prog="__4" id="" class="ft-page page-8  future-section future-page" data-id="__page-4">
 				<h3 id="text-7" contenteditable="true">我们都在充分利用时光，做自己喜欢做的事。</h3>
 				<img src="a/6.jpg" alt="生活难免有风风雨雨">
 			</div>
@@ -67,7 +67,7 @@
 			</div>
 		</div>
 		<div id="" data-prog="__3" class="ft-section section-3" data-id="__section-3">
-			<div data-prog="__1" id="" class="ft-page page-11 full-img future-section" data-id="__page-1">
+			<div data-prog="__1" id="" class="ft-page page-11  future-section" data-id="__page-1">
 				<h3 id="text-10" contenteditable="true">每每想起奋斗的路途上还有你，我都会嘴角上扬。</h3>
 				<img src="a/8.jpg">
 			</div>
@@ -77,7 +77,7 @@
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-13 future-section future-page" data-id="__page-3">
 				<img src="a/10.jpg" alt="可是小明的爱情又在哪里呢？">
-				<h3 id="text-13" contenteditable="true">可是他的爱情又在哪里呢？</h3>
+				<h3 id="text-13" contenteditable="true">一年来</h3>
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-14 left-img future-section future-page" data-id="__page-4">
 				<h3 id="text-14" contenteditable="true">在镜子里面吗？他不敢相信</h3>
@@ -97,7 +97,7 @@
 			</div>
 		</div>
 		<div id="" data-prog="__4" class="ft-section section-4" data-id="__section-4">
-			<div data-prog="__1" id="" class="ft-page page-18 full-img future-section" data-id="__page-1">
+			<div data-prog="__1" id="" class="ft-page page-18  future-section" data-id="__page-1">
 				<p class="text" id="text-20" contenteditable="true">他喜欢大，因为她的出现，他脸上有了更加灿烂的笑容</p>
 				<img src="a/15.jpg">
 			</div>
@@ -133,87 +133,87 @@
 				<img src="a/22.jpeg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-26 top-text future-section future-page" data-id="__page-2">
-				<h3 id="text-29" contenteditable="true">然后高兴地进入梦乡，希望梦到她</h3>
+				<h3 id="text-29" contenteditable="true">希望你每天清晨醒来，都能再赖一会儿床</h3>
 				<img src="a/23.jpeg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-27 future-section future-page" data-id="__page-3">
-				<h3 id="text-30" contenteditable="true">他很快就成为了她的逛街助手</h3>
+				<h3 id="text-30" contenteditable="true">希望你洗漱的时候水温正好，牙膏洗面奶不多不少</h3>
 				<img src="a/24.jpeg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-28 future-section future-page" data-id="__page-4">
-				<h3 id="text-31" contenteditable="true">他和她一起去了好多地方玩</h3>
+				<h3 id="text-31" contenteditable="true">希望你一出门阳光刺眼，微风不燥</h3>
 				<img src="a/25.jpeg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-29 future-section future-page" data-id="__page-5">
-				<h3 id="text-32" contenteditable="true">他也和她一样成为了一个吃货</h3>
+				<h3 id="text-32" contenteditable="true">希望你排队打饭的队伍刚好是最快的队伍</h3>
 				<img src="a/26.jpeg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-30 future-section future-page" data-id="__page-6">
-				<h3 id="text-33" contenteditable="true">后来，他们搬到了一起</h3>
+				<h3 id="text-33" contenteditable="true">希望你打的饭阿姨都因为你的笑容和美丽多给你些</h3>
 				<img src="a/27.jpeg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-31 future-section future-page" data-id="__page-7">
-				<h3 id="text-34" contenteditable="true">于是他开始学习新的技能</h3>
+				<h3 id="text-34" contenteditable="true">希望你听讲认真，学得都会</h3>
 				<img src="a/28.jpeg">
 			</div>
 		</div>
 		<div id="" data-prog="__6" class="ft-section section-6" data-id="__section-6">
 			<div data-prog="__1" id="" class="ft-page page-32 future-section" data-id="__page-1">
-				<h3 id="text-35" contenteditable="true">煮饭</h3>
+				<h3 id="text-35" contenteditable="true">希望你答题顺利，做的都对</h3>
 				<img src="a/29.jpeg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-33 top-text future-section future-page" data-id="__page-2">
-				<h3 id="text-36" contenteditable="true">每天早上，他们吃着自己做的美食</h3>
+				<h3 id="text-36" contenteditable="true">希望你偶尔犯困都不被老师发现</h3>
 				<img src="a/30.jpeg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-34 left-img future-section future-page" data-id="__page-3">
-				<h3 id="text-37" contenteditable="true">然后在同一个站台，高高兴兴的一起上班</h3>
+				<h3 id="text-37" contenteditable="true">希望你吃饭的时候刚好有座</h3>
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-35 future-section future-page" data-id="__page-4">
-				<h3><span id="text-38" contenteditable="true">他感觉自己好幸福。</span><br><span id="text-39" contenteditable="true">因为自己有了家</span><br><span id="text-40" contenteditable="true">那个有她在的地方</span></h3>
+				<h3><span id="text-38" contenteditable="true">希望你不小心丢失的东西自己冒出来</span><br><span id="text-39" contenteditable="true">希望你你没带钥匙的时候宿舍刚好有人</span><br><span id="text-40" contenteditable="true">那个有她在的地方</span></h3>
 				<img src="a/31.jpeg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-36 full-img future-section future-page" data-id="__page-5">
-				<h3 id="text-41" contenteditable="true">他们偶尔也会吵架</h3>
+				<h3 id="text-41" contenteditable="true">希望你走到站牌公交车就刚好到了</h3>
 				<img src="a/32.jpeg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-37 left-img future-section future-page" data-id="__page-6">
-				<h3 id="text-42" contenteditable="true">他不想这样</h3>
+				<h3 id="text-42" contenteditable="true">希望你跑步不会摔跤</h3>
 				<img src="a/33.jpeg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-38 bottom-text future-section future-page" data-id="__page-7">
 				<img src="a/34.jpeg">
-				<h3 id="text-43" contenteditable="true">一定是我有什么做的不对，他在想</h3>
+				<h3 id="text-43" contenteditable="true">希望你暴富</h3>
 			</div>
 		</div>
 		<div id="" data-prog="__7" class="ft-section section-7" data-id="__section-7">
 			<div data-prog="__1" id="" class="ft-page page-39 left-img future-section" data-id="__page-1">
-				<h3 id="text-44" contenteditable="true">如果没有她在身边，窗外就没有风景</h3>
+				<h3 id="text-44" contenteditable="true">希望你吃进去的东西都成了快乐而不是肉</h3>
 				<img src="a/35.jpeg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-40 future-section future-page" data-id="__page-2">
-				<h3 id="text-45" contenteditable="true">如果没有她在身后</h3>
+				<h3 id="text-45" contenteditable="true">希望你圆满完成自己的小目标</h3>
 				<img src="a/36.jpeg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-41 future-section future-page" data-id="__page-3">
 				<img src="a/37.jpeg" class="img1">
 				<img src="a/38.jpg" class="img2">
-				<h3 id="text-46" contenteditable="true"> 他又怎会飞的更高更远</h3>
+				<h3 id="text-46" contenteditable="true">希望你期待的事都有一个比你想象中还好的结果</h3>
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-42 future-section future-page" data-id="__page-4">
-				<h3><span id="text-47" contenteditable="true">他不想这样。他要为她改变自己</span><br><span id="text-48" contenteditable="true">她说她喜欢狮子座的人，于是他许下愿望</span></h3>
+				<h3><span id="text-47" contenteditable="true">希望你学习努力，每天进步</span><br><span id="text-48" contenteditable="true">积极向上，快乐永远</span></h3>
 				<img src="39.jpeg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-43 future-section future-page" data-id="__page-5">
 				<img src="a/41.jpeg">
-				<h3 id="text-49" contenteditable="true">我愿为你变成狮子座</h3>
+				<h3 id="text-49" contenteditable="true">希望你做的每一件事都能获得成就感</h3>
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-44 left-img future-section future-page" data-id="__page-6">
-				<h3><span id="text-50" contenteditable="true">爱情就像花草一样</span><br><span id="text-51" contenteditable="true">需要用包容来浇灌</span></h3>
+				<h3><span id="text-50" contenteditable="true">希望你的生活充斥着意外之喜</span><br><span id="text-51" contenteditable="true">锦上添花</span></h3>
 				<img src="a/42.jpeg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-45 left-img future-section future-page" data-id="__page-7">
-				<h3><span id="text-52" contenteditable="true">再到后来，她要过生日了</span><br><span id="text-53" contenteditable="true">他开始为她准备礼物</span></h3>
+				<h3><span id="text-52" contenteditable="true">愿你抬头就能看见繁星陪伴</span><br><span id="text-53" contenteditable="true">愿你低头就能闻见花草纷纷</span></h3>
 				<img src="a/43.jpeg">
 			</div>
 		</div>
@@ -221,10 +221,10 @@
 			<div data-prog="__1" id="" class="ft-page page-46 future-section" data-id="__page-1">
 				<img src="a/44.jpeg">
 				<h3>
-					<span id="text-54" contenteditable="true">看着礼物一件件准备好了</span>
-					<span id="text-55" contenteditable="true">他好开心</span>
-					<span id="text-56" contenteditable="true">因为他想象着她收到礼物时</span>
-					<span id="text-57" contenteditable="true">开心的样子</span>
+					<span id="text-54" contenteditable="true">愿你躺在床上的时候，被窝已经有了温度</span>
+					<span id="text-55" contenteditable="true">愿你幸运</span>
+					<span id="text-56" contenteditable="true">愿你每天睡前都是轻松和愉快</span>
+					<span id="text-57" contenteditable="true">愿你知足</span>
 				</h3>
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-47 top-text future-section future-page" data-id="__page-2">
@@ -248,16 +248,16 @@
 				</p>
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-50 future-section future-page" data-id="__page-5">
-				<p class="text" id="text-66" contenteditable="true">想让你的周围充满给予你喜欢，温暖，陪伴，理解与包容的人。</p>
+				<p class="text" id="text-66" contenteditable="true">想你的周围充满给予你喜欢，温暖，陪伴，理解与包容的人。</p>
 				<img src="a/48.jpeg" class="img1">
 				<img src="a/49.jpeg" class="img2">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-51 future-section future-page" data-id="__page-6">
 				<p>
-					<span id="text-67" contenteditable="true">左右，我们是都在的。</span><br>
+					<span id="text-67" contenteditable="true">左右，我都希望你是全天下最快乐的。</span><br>
 					<span id="text-68" contenteditable="true">左右，你做什么我都是支持和肯定的。</span><br>
-					<span id="text-69" contenteditable="true">I would share my sadness with you.But just a little.</span><br>
-					<span id="text-70" contenteditable="true">I prefer to share my happiness with you.Even wish you could feel happy as I felt.</span>
+					<span id="text-69" contenteditable="true">。</span><br>
+					<span id="text-70" contenteditable="true">。</span>
 					</p>
 			</div>
 		</div>
