--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -122,7 +122,7 @@
 				<h3 id="text-25" contenteditable="true">然后两个人一起出去玩</h3>
 				<img src="a/20.jpg.jpg">
 			</div>
-			<div data-prog="__7" id="" class="ft-page page-24 full-img future-section future-page" data-id="__page-7">	
+			<div data-prog="__7" id="" class="ft-page page-24 future-section future-page" data-id="__page-7">	
 				<h3 id="text-26" contenteditable="true">晚上他会把她送回家</h3>
 				<img src="a/21.jpg">
 			</div>
@@ -173,7 +173,7 @@
 				<h3><span id="text-38" contenteditable="true">希望你不小心丢失的东西自己冒出来</span><br><span id="text-39" contenteditable="true">希望你你没带钥匙的时候宿舍刚好有人</span><br><span id="text-40" contenteditable="true">那个有她在的地方</span></h3>
 				<img src="a/31.jpeg">
 			</div>
-			<div data-prog="__5" id="" class="ft-page page-36 full-img future-section future-page" data-id="__page-5">
+			<div data-prog="__5" id="" class="ft-page page-36 future-section future-page" data-id="__page-5">
 				<h3 id="text-41" contenteditable="true">希望你走到站牌公交车就刚好到了</h3>
 				<img src="a/32.jpeg">
 			</div>
@@ -262,7 +262,7 @@
 			</div>
 		</div>
 		<div id="" data-prog="__9" class="ft-section section-9" data-id="__section-9">
-			<div data-prog="__1" id="" class="ft-page page-52 full-img future-section" data-id="__page-1">
+			<div data-prog="__1" id="" class="ft-page page-52 future-section" data-id="__page-1">
 				<h3 id="text-71" contenteditable="true">愿世界美好与你环环相扣</h3>
 				<img src="a/50.jpeg">
 			</div>
@@ -272,13 +272,13 @@
 				<h3 id="text-72" contenteditable="true">一直有我</h3>
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-54 center-img future-section future-page" data-id="__page-3">
-				<img src="a/53.jpeg" alt="happy birthday">
+				<img src="a/4.jpeg" alt="happy birthday">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-55 right-img future-section future-page" data-id="__page-4">
 				<img src="a/57.jpeg">
 				<p class="text">
-					<span id="text-73" contenteditable="true">生日快乐，我的人间理想</span><br>
-					<span id="text-74" contenteditable="true">满树繁花，你是心之所向。</span><br>
+					<span id="text-73" contenteditable="true">生日快乐，我的人间理想。</span><br>
+					<span id="text-74" contenteditable="true">天天快乐，你是心之所向。</span><br>
 					<br>
 					<br>
 					
