--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -31,7 +31,7 @@
 				<p class="top-text" id="text-1" contenteditable="true">又是一年寒冬时，我们的佳璇迎来了19岁的生日</p>
 				<img src="a/22.jpeg" alt="啊">
 			</div>
-			<div data-prog="__3" id="" class="ft-page page-3 left-img future-page" data-id="__page-3">
+			<div data-prog="__3" id="" class="ft-page page-3 future-page" data-id="__page-3">
 				<h2 class="text" id="text-2" contenteditable="true">18岁的你美丽天真可爱优秀</h2>
 				<img src="a/1.jpeg" alt="18岁的你美丽天真可爱优秀">
 			</div>
@@ -58,7 +58,7 @@
 				<img src="a/6.jpg" alt="生活难免有风风雨雨">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-9 future-section future-page" data-id="__page-5">
-				<h3 id="text-8" contenteditable="true">我们都在追赶时光，做自己想完成的事。</h3>
+				<h3 id="text-8" contenteditable="true">我们都在奋力追赶时光，做自己想完成的事。</h3>
 				<img src="a/6.jpg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-10 future-section future-page" data-id="__page-6">
