--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -32,104 +32,104 @@
 				<img src="a/22.jpeg" alt="啊">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-3 future-page" data-id="__page-3">
-				<h2 class="text" id="text-2" contenteditable="true">18岁的你美丽天真可爱优秀</h2>
+				<h2 class="text" id="text-2" contenteditable="true">大学的生活大概就是充实与忙碌的</h2>
 				<img src="a/1.jpeg" alt="18岁的你美丽天真可爱优秀">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-4 right-img future-page" data-id="__page-4">
-				<h2 class="text" id="text-3" contenteditable="true">幸运的是一直陪伴你左右。</h2>
+				<h2 class="text" id="text-3" contenteditable="true">还没来得急抓住18岁的尾巴，19岁就悄然而至</h2>
 				<img src="a/2.jpg" alt="幸运的是一直陪伴你左右。">
 			</div>
 		</div>
 		<div id="" data-prog="__2" class="ft-section section-2" data-id="__section-2">
 			<div data-prog="__1" id="" class="ft-page page-5  future-section" data-id="__page-1">
-				<h2 class="center-text" id="text-4" contenteditable="true">见证着你的经历和故事，分享着你的快乐与幸福。</h2>
+				<h2 class="center-text" id="text-4" contenteditable="true">你的18岁依旧耀眼出色，让人心底高兴</h2>
 				<img src="a/3.jpg" alt="见证">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-6 future-section future-page" data-id="__page-2">
-				<h2 class="center-text" id="text-5" contenteditable="true">适应了大学忙碌的生活</h2>
+				<h2 class="center-text" id="text-5" contenteditable="true">幸运的是一直陪伴你左右。</h2>
 				<img src="a/4.jpg" alt="一个人的游乐场">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-7 future-section future-page" data-id="__page-3">
-				<h3 id="text-6" contenteditable="true">我们都拥有理想，目标明确。</h3>
+				<h3 id="text-6" contenteditable="true">见证着你的经历和故事，分享着你的快乐与幸福。</h3>
 				<img src="a/5.jpg" alt="但他依然乐观，微笑着，等待着">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-8  future-section future-page" data-id="__page-4">
-				<h3 id="text-7" contenteditable="true">我们都在充分利用时光，做自己喜欢做的事。</h3>
-				<img src="a/6.jpg" alt="生活难免有风风雨雨">
+				<h3 id="text-7" contenteditable="true">知道你的专业成绩连续第一</h3>
+				<img src="a/101.jpg" alt="生活难免有风风雨雨">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-9 future-section future-page" data-id="__page-5">
-				<h3 id="text-8" contenteditable="true">我们都在奋力追赶时光，做自己想完成的事。</h3>
-				<img src="a/6.jpg">
+				<h3 id="text-8" contenteditable="true">看到你在国护的团结和毅力</h3>
+				<img src="a/102.jpg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-10 future-section future-page" data-id="__page-6">
-				<h3 id="text-9" contenteditable="true">我们都积极，阳光，自信，向上。</h3>
-				<img src="a/7.jpg">
+				<h3 id="text-9" contenteditable="true">欣赏过你在广播台的颜值和声音</h3>
+				<img src="a/103.jpg">
 			</div>
 		</div>
 		<div id="" data-prog="__3" class="ft-section section-3" data-id="__section-3">
 			<div data-prog="__1" id="" class="ft-page page-11  future-section" data-id="__page-1">
-				<h3 id="text-10" contenteditable="true">每每想起奋斗的路途上还有你，我都会嘴角上扬。</h3>
-				<img src="a/8.jpg">
+				<h3 id="text-10" contenteditable="true">知晓你跳健美操的辛苦与不易</h3>
+				<img src="a/104.jpg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-12 future-section future-page" data-id="__page-2">
-				<h3><span id="text-11" contenteditable="true">感谢你出现在这个世上，</span><br><span id="text-12" contenteditable="true">让我相信一切美好。</span></h3>
-				<img src="a/9.jpg">
+				<h3><span id="text-11" contenteditable="true">看过你参加的各类演讲比赛</span><br><span id="text-12" contenteditable="true">朗诵比赛</span></h3>
+				<img src="a/105.jpg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-13 future-section future-page" data-id="__page-3">
 				<img src="a/10.jpg" alt="可是小明的爱情又在哪里呢？">
-				<h3 id="text-13" contenteditable="true">一年来</h3>
+				<h3 id="text-13" contenteditable="true">体会过你身兼数职的忙碌和责任</h3>
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-14 left-img future-section future-page" data-id="__page-4">
-				<h3 id="text-14" contenteditable="true">在镜子里面吗？他不敢相信</h3>
+				<h3 id="text-14" contenteditable="true">你真得很棒，比你想得还要棒</h3>
 				<img src="a/11.jpg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-15 left-img future-section future-page" data-id="__page-5">
-				<h3><span id="text-15" contenteditable="true">他去问大树，我的爱情在哪里？</span><br><span id="text-16" contenteditable="true">大树告诉他，也许就在不远的地方</span></h3>
+				<h3><span id="text-15" contenteditable="true">每每想起奋斗的路途上还有你，</span><br><span id="text-16" contenteditable="true">我都会嘴角上扬。</span></h3>
 				<img src="a/12.jpg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-16 left-img future-section future-page" data-id="__page-6">
-				<h3><span id="text-17" contenteditable="true">于是，他一个人继续向前走</span><br><span id="text-18" contenteditable="true">走在茫茫的雪地上</span></h3>
+				<h3><span id="text-17" contenteditable="true">我们都拥有理想</span><br><span id="text-18" contenteditable="true">目标明确</span></h3>
 				<img src="a/13.jpg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-17 top-text future-section future-page" data-id="__page-7">
-				<h3 id="text-19" contenteditable="true">直到有一天他与她相遇了</h3>
+				<h3 id="text-19" contenteditable="true">我们都在充分利用时光，做自己喜欢做的事。</h3>
 				<img src="a/14.jpg">
 			</div>
 		</div>
 		<div id="" data-prog="__4" class="ft-section section-4" data-id="__section-4">
 			<div data-prog="__1" id="" class="ft-page page-18  future-section" data-id="__page-1">
-				<p class="text" id="text-20" contenteditable="true">他喜欢大，因为她的出现，他脸上有了更加灿烂的笑容</p>
+				<p class="text" id="text-20" contenteditable="true">我们都在奋力追赶时光，做自己想完成的事。</p>
 				<img src="a/15.jpg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-19 future-section future-page" data-id="__page-2">
-				<h3 id="text-21" contenteditable="true">可是她会喜欢他吗？</h3>
+				<h3 id="text-21" contenteditable="true">我们都积极，阳光，自信，向上。</h3>
 				<img src="a/16.jpg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-20 future-section future-page" data-id="__page-3">
 				<img src="a/iali59.png" tppabs="http://kingzs70.oss.aliyuncs.com/iali/img/iali59.png">
-				<h3 id="text-22" contenteditable="true">终于有一天，他鼓起了勇气</h3>
+				<h3 id="text-22" contenteditable="true">我们都在不断地了解自己，认可自己</h3>
 				<img src="a/17.jpg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-21 future-section future-page" data-id="__page-4">
-				<h3 id="text-23" contenteditable="true">他好高兴</h3>
+				<h3 id="text-23" contenteditable="true">我们在并肩成长。</h3>
 				<img src="a/18.jpg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-22 left-img future-section future-page" data-id="__page-5">
-				<h3 id="text-24" contenteditable="true">每天他都会去找她</h3>
-				<img src="a/19.jpg.jpg">
+				<h3 id="text-24" contenteditable="true">感谢你出现在这个世上，让我相信一切美好。</h3>
+				<img src="a/45.jpg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-23 left-img future-section future-page" data-id="__page-6">
-				<h3 id="text-25" contenteditable="true">然后两个人一起出去玩</h3>
-				<img src="a/20.jpg.jpg">
+				<h3 id="text-25" contenteditable="true">希望你的笑容永远像小时候那样天真可爱</h3>
+				<img src="a/44.jpg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-24 future-section future-page" data-id="__page-7">	
-				<h3 id="text-26" contenteditable="true">晚上他会把她送回家</h3>
+				<h3 id="text-26" contenteditable="true">愿你在好看的道路上越走越远，永无止境。</h3>
 				<img src="a/21.jpg">
 			</div>
 		</div>
 		<div id="" data-prog="__5" class="ft-section section-5" data-id="__section-5">
 			<div data-prog="__1" id="" class="ft-page page-25 left-img future-section" data-id="__page-1">
-				<h3><span id="text-27" contenteditable="true">直到很晚</span><br><span id="text-28" contenteditable="true">他才会一个人回家</span></h3>
+				<h3><span id="text-27" contenteditable="true">在你到来的19岁</span><br><span id="text-28" contenteditable="true">我把所有的祝福都给你</span></h3>
 				<img src="a/22.jpeg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-26 top-text future-section future-page" data-id="__page-2">
@@ -240,7 +240,7 @@
 				<p><span id="text-62" contenteditable="true">去做光芒万丈，不枉众生喜欢，活成你想要的模样。</span><br><span id="text-63" contenteditable="true">去做灿烂星光，负责众人仰望，追寻你自己的理想。</span></p>
 				<img src="a/46.jpeg">
 			</div>
-			<div data-prog="__4" id="" class="ft-page page-49 full-img future-section future-page" data-id="__page-4">
+			<div data-prog="__4" id="" class="ft-page page-49 future-section future-page" data-id="__page-4">
 			<img src="a/47.jpeg">
 				<p class="text">
 					<span class="text" id="text-64" contenteditable="true">愿生活里有热汤和甜食。</span><br>
