--- a/hpbirthdaytojx.html
+++ b/hpbirthdaytojx.html
@@ -35,29 +35,29 @@
 				<h2 class="text" id="text-2" contenteditable="true">大学的生活大概就是充实与忙碌的</h2>
 				<img src="a/1.jpeg" alt="18岁的你美丽天真可爱优秀">
 			</div>
-			<div data-prog="__4" id="" class="ft-page page-4 right-img future-page" data-id="__page-4">
+			<div data-prog="__4" id="" class="ft-page page-4 future-page" data-id="__page-4">
 				<h2 class="text" id="text-3" contenteditable="true">还没来得急抓住18岁的尾巴，19岁就悄然而至</h2>
-				<img src="a/2.jpg" alt="幸运的是一直陪伴你左右。">
+				<img src="a/6.jpg" alt="幸运的是一直陪伴你左右。">
 			</div>
 		</div>
 		<div id="" data-prog="__2" class="ft-section section-2" data-id="__section-2">
 			<div data-prog="__1" id="" class="ft-page page-5  future-section" data-id="__page-1">
 				<h2 class="center-text" id="text-4" contenteditable="true">你的18岁依旧耀眼出色，让人心底高兴</h2>
-				<img src="a/3.jpg" alt="见证">
+				<img src="a/21.jpg" alt="见证">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-6 future-section future-page" data-id="__page-2">
-				<h2 class="center-text" id="text-5" contenteditable="true">幸运的是一直陪伴你左右。</h2>
+				<h2 class="text" id="text-5" contenteditable="true">幸运的是一直陪伴你左右。</h2>
 				<img src="a/4.jpg" alt="一个人的游乐场">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-7 future-section future-page" data-id="__page-3">
-				<h3 id="text-6" contenteditable="true">见证着你的经历和故事，分享着你的快乐与幸福。</h3>
+				<h3 id="center-text-6" contenteditable="true">见证着你的经历和故事，分享着你的快乐与幸福。</h3>
 				<img src="a/5.jpg" alt="但他依然乐观，微笑着，等待着">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-8  future-section future-page" data-id="__page-4">
-				<h3 id="text-7" contenteditable="true">知道你的专业成绩连续第一</h3>
+				<h3 id="top-text-7" contenteditable="true">知道你的专业成绩连续第一</h3>
 				<img src="a/101.jpg" alt="生活难免有风风雨雨">
 			</div>
-			<div data-prog="__5" id="" class="ft-page page-9 future-section future-page" data-id="__page-5">
+			<div data-prog="__5" id="" class="ft-page page-9 left-img future-section future-page" data-id="__page-5">
 				<h3 id="text-8" contenteditable="true">看到你在国护的团结和毅力</h3>
 				<img src="a/102.jpg">
 			</div>
@@ -71,82 +71,81 @@
 				<h3 id="text-10" contenteditable="true">知晓你跳健美操的辛苦与不易</h3>
 				<img src="a/104.jpg">
 			</div>
-			<div data-prog="__2" id="" class="ft-page page-12 future-section future-page" data-id="__page-2">
+			<div data-prog="__2" id="" class="ft-page page-12  center-img future-section future-page" data-id="__page-2">
 				<h3><span id="text-11" contenteditable="true">看过你参加的各类演讲比赛</span><br><span id="text-12" contenteditable="true">朗诵比赛</span></h3>
 				<img src="a/105.jpg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-13 future-section future-page" data-id="__page-3">
-				<img src="a/10.jpg" alt="可是小明的爱情又在哪里呢？">
+				<img src="a/34.jpg" alt="可是小明的爱情又在哪里呢？">
 				<h3 id="text-13" contenteditable="true">体会过你身兼数职的忙碌和责任</h3>
 			</div>
-			<div data-prog="__4" id="" class="ft-page page-14 left-img future-section future-page" data-id="__page-4">
+			<div data-prog="__4" id="" class="ft-page page-14 future-section future-page" data-id="__page-4">
 				<h3 id="text-14" contenteditable="true">你真得很棒，比你想得还要棒</h3>
 				<img src="a/11.jpg">
 			</div>
-			<div data-prog="__5" id="" class="ft-page page-15 left-img future-section future-page" data-id="__page-5">
+			<div data-prog="__5" id="" class="ft-page page-15 future-section future-page" data-id="__page-5">
 				<h3><span id="text-15" contenteditable="true">每每想起奋斗的路途上还有你，</span><br><span id="text-16" contenteditable="true">我都会嘴角上扬。</span></h3>
 				<img src="a/12.jpg">
 			</div>
-			<div data-prog="__6" id="" class="ft-page page-16 left-img future-section future-page" data-id="__page-6">
+			<div data-prog="__6" id="" class="ft-page page-16 future-section future-page" data-id="__page-6">
 				<h3><span id="text-17" contenteditable="true">我们都拥有理想</span><br><span id="text-18" contenteditable="true">目标明确</span></h3>
-				<img src="a/13.jpg">
+				<img src="a/55.jpg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-17 top-text future-section future-page" data-id="__page-7">
 				<h3 id="text-19" contenteditable="true">我们都在充分利用时光，做自己喜欢做的事。</h3>
-				<img src="a/14.jpg">
+				<img src="a/9.jpg">
 			</div>
 		</div>
 		<div id="" data-prog="__4" class="ft-section section-4" data-id="__section-4">
 			<div data-prog="__1" id="" class="ft-page page-18  future-section" data-id="__page-1">
 				<p class="text" id="text-20" contenteditable="true">我们都在奋力追赶时光，做自己想完成的事。</p>
-				<img src="a/15.jpg">
+				<img src="a/18.jpg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-19 future-section future-page" data-id="__page-2">
 				<h3 id="text-21" contenteditable="true">我们都积极，阳光，自信，向上。</h3>
 				<img src="a/16.jpg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-20 future-section future-page" data-id="__page-3">
-				<img src="a/iali59.png" tppabs="http://kingzs70.oss.aliyuncs.com/iali/img/iali59.png">
 				<h3 id="text-22" contenteditable="true">我们都在不断地了解自己，认可自己</h3>
-				<img src="a/17.jpg">
+				<img src="a/36.jpg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-21 future-section future-page" data-id="__page-4">
 				<h3 id="text-23" contenteditable="true">我们在并肩成长。</h3>
-				<img src="a/18.jpg">
+				<img src="a/51.jpg">
 			</div>
-			<div data-prog="__5" id="" class="ft-page page-22 left-img future-section future-page" data-id="__page-5">
+			<div data-prog="__5" id="" class="ft-page page-22 future-section future-page" data-id="__page-5">
 				<h3 id="text-24" contenteditable="true">感谢你出现在这个世上，让我相信一切美好。</h3>
 				<img src="a/45.jpg">
 			</div>
-			<div data-prog="__6" id="" class="ft-page page-23 left-img future-section future-page" data-id="__page-6">
+			<div data-prog="__6" id="" class="ft-page page-23 future-section future-page" data-id="__page-6">
 				<h3 id="text-25" contenteditable="true">希望你的笑容永远像小时候那样天真可爱</h3>
 				<img src="a/44.jpg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-24 future-section future-page" data-id="__page-7">	
 				<h3 id="text-26" contenteditable="true">愿你在好看的道路上越走越远，永无止境。</h3>
-				<img src="a/21.jpg">
+				<img src="a/26.jpg">
 			</div>
 		</div>
 		<div id="" data-prog="__5" class="ft-section section-5" data-id="__section-5">
-			<div data-prog="__1" id="" class="ft-page page-25 left-img future-section" data-id="__page-1">
+			<div data-prog="__1" id="" class="ft-page page-25 future-section" data-id="__page-1">
 				<h3><span id="text-27" contenteditable="true">在你到来的19岁</span><br><span id="text-28" contenteditable="true">我把所有的祝福都给你</span></h3>
-				<img src="a/22.jpeg">
+				<img src="a/62.jpeg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-26 top-text future-section future-page" data-id="__page-2">
 				<h3 id="text-29" contenteditable="true">希望你每天清晨醒来，都能再赖一会儿床</h3>
-				<img src="a/23.jpeg">
+				<img src="a/24.jpeg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-27 future-section future-page" data-id="__page-3">
 				<h3 id="text-30" contenteditable="true">希望你洗漱的时候水温正好，牙膏洗面奶不多不少</h3>
-				<img src="a/24.jpeg">
+				<img src="a/8.jpeg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-28 future-section future-page" data-id="__page-4">
 				<h3 id="text-31" contenteditable="true">希望你一出门阳光刺眼，微风不燥</h3>
-				<img src="a/25.jpeg">
+				<img src="a/49.jpeg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-29 future-section future-page" data-id="__page-5">
 				<h3 id="text-32" contenteditable="true">希望你排队打饭的队伍刚好是最快的队伍</h3>
-				<img src="a/26.jpeg">
+				<img src="a/25.jpeg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-30 future-section future-page" data-id="__page-6">
 				<h3 id="text-33" contenteditable="true">希望你打的饭阿姨都因为你的笑容和美丽多给你些</h3>
@@ -154,13 +153,13 @@
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-31 future-section future-page" data-id="__page-7">
 				<h3 id="text-34" contenteditable="true">希望你听讲认真，学得都会</h3>
-				<img src="a/28.jpeg">
+				<img src="a/50.jpeg">
 			</div>
 		</div>
 		<div id="" data-prog="__6" class="ft-section section-6" data-id="__section-6">
 			<div data-prog="__1" id="" class="ft-page page-32 future-section" data-id="__page-1">
 				<h3 id="text-35" contenteditable="true">希望你答题顺利，做的都对</h3>
-				<img src="a/29.jpeg">
+				<img src="a/19.jpeg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-33 top-text future-section future-page" data-id="__page-2">
 				<h3 id="text-36" contenteditable="true">希望你偶尔犯困都不被老师发现</h3>
@@ -168,26 +167,27 @@
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-34 left-img future-section future-page" data-id="__page-3">
 				<h3 id="text-37" contenteditable="true">希望你吃饭的时候刚好有座</h3>
+				<img src="a/17.jpg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-35 future-section future-page" data-id="__page-4">
 				<h3><span id="text-38" contenteditable="true">希望你不小心丢失的东西自己冒出来</span><br><span id="text-39" contenteditable="true">希望你你没带钥匙的时候宿舍刚好有人</span><br><span id="text-40" contenteditable="true">那个有她在的地方</span></h3>
 				<img src="a/31.jpeg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-36 future-section future-page" data-id="__page-5">
-				<h3 id="text-41" contenteditable="true">希望你走到站牌公交车就刚好到了</h3>
+				<h3 id="bottom-text-41" contenteditable="true">希望你走到站牌公交车就刚好到了</h3>
 				<img src="a/32.jpeg">
 			</div>
-			<div data-prog="__6" id="" class="ft-page page-37 left-img future-section future-page" data-id="__page-6">
+			<div data-prog="__6" id="" class="ft-page page-37 future-section future-page" data-id="__page-6">
 				<h3 id="text-42" contenteditable="true">希望你跑步不会摔跤</h3>
-				<img src="a/33.jpeg">
+				<img src="a/41.jpeg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-38 bottom-text future-section future-page" data-id="__page-7">
-				<img src="a/34.jpeg">
+				<img src="a/33.jpeg">
 				<h3 id="text-43" contenteditable="true">希望你暴富</h3>
 			</div>
 		</div>
 		<div id="" data-prog="__7" class="ft-section section-7" data-id="__section-7">
-			<div data-prog="__1" id="" class="ft-page page-39 left-img future-section" data-id="__page-1">
+			<div data-prog="__1" id="" class="ft-page page-39 future-section" data-id="__page-1">
 				<h3 id="text-44" contenteditable="true">希望你吃进去的东西都成了快乐而不是肉</h3>
 				<img src="a/35.jpeg">
 			</div>
@@ -196,8 +196,7 @@
 				<img src="a/36.jpeg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-41 future-section future-page" data-id="__page-3">
-				<img src="a/37.jpeg" class="img1">
-				<img src="a/38.jpg" class="img2">
+				<img src="a/46.jpeg" class="img1">
 				<h3 id="text-46" contenteditable="true">希望你期待的事都有一个比你想象中还好的结果</h3>
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-42 future-section future-page" data-id="__page-4">
@@ -205,21 +204,21 @@
 				<img src="39.jpeg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-43 future-section future-page" data-id="__page-5">
-				<img src="a/41.jpeg">
+				<img src="a/13.jpg">
 				<h3 id="text-49" contenteditable="true">希望你做的每一件事都能获得成就感</h3>
 			</div>
-			<div data-prog="__6" id="" class="ft-page page-44 left-img future-section future-page" data-id="__page-6">
+			<div data-prog="__6" id="" class="ft-page page-44 future-section future-page" data-id="__page-6">
 				<h3><span id="text-50" contenteditable="true">希望你的生活充斥着意外之喜</span><br><span id="text-51" contenteditable="true">锦上添花</span></h3>
 				<img src="a/42.jpeg">
 			</div>
-			<div data-prog="__7" id="" class="ft-page page-45 left-img future-section future-page" data-id="__page-7">
+			<div data-prog="__7" id="" class="ft-page page-45 future-section future-page" data-id="__page-7">
 				<h3><span id="text-52" contenteditable="true">愿你抬头就能看见繁星陪伴</span><br><span id="text-53" contenteditable="true">愿你低头就能闻见花草纷纷</span></h3>
-				<img src="a/43.jpeg">
+				<img src="a/53.jpeg">
 			</div>
 		</div>
 		<div id="" data-prog="__8" class="ft-section section-8" data-id="__section-8">
 			<div data-prog="__1" id="" class="ft-page page-46 future-section" data-id="__page-1">
-				<img src="a/44.jpeg">
+				<img src="a/54.jpeg">
 				<h3>
 					<span id="text-54" contenteditable="true">愿你躺在床上的时候，被窝已经有了温度</span>
 					<span id="text-55" contenteditable="true">愿你幸运</span>
@@ -228,7 +227,7 @@
 				</h3>
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-47 top-text future-section future-page" data-id="__page-2">
-				<img src="a/45.jpeg">
+				<img src="a/14.jpeg">
 				<h3>
 					<span id="text-58" contenteditable="true">愿你的心灵纯净永远。</span>
 					<span id="text-59" contenteditable="true">前途光明，生活美满。</span>
@@ -238,19 +237,18 @@
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-48 left-img future-section future-page" data-id="__page-3">
 				<p><span id="text-62" contenteditable="true">去做光芒万丈，不枉众生喜欢，活成你想要的模样。</span><br><span id="text-63" contenteditable="true">去做灿烂星光，负责众人仰望，追寻你自己的理想。</span></p>
-				<img src="a/46.jpeg">
+				<img src="a/29.jpeg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-49 future-section future-page" data-id="__page-4">
-			<img src="a/47.jpeg">
 				<p class="text">
 					<span class="text" id="text-64" contenteditable="true">愿生活里有热汤和甜食。</span><br>
 					<span class="text" id="text-65" contenteditable="true">内心里有诗和远方。</span>
+					<img src="a/48.jpeg">
 				</p>
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-50 future-section future-page" data-id="__page-5">
 				<p class="text" id="text-66" contenteditable="true">想你的周围充满给予你喜欢，温暖，陪伴，理解与包容的人。</p>
 				<img src="a/48.jpeg" class="img1">
-				<img src="a/49.jpeg" class="img2">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-51 future-section future-page" data-id="__page-6">
 				<p>
@@ -264,15 +262,14 @@
 		<div id="" data-prog="__9" class="ft-section section-9" data-id="__section-9">
 			<div data-prog="__1" id="" class="ft-page page-52 future-section" data-id="__page-1">
 				<h3 id="text-71" contenteditable="true">愿世界美好与你环环相扣</h3>
-				<img src="a/50.jpeg">
+				<img src="a/28.jpeg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-53 future-section future-page" data-id="__page-2">
-				<img src="a/62.jpeg" alt="happy birthday">
 				<h6 id="text-72" contenteditable="true">如果这一切都太难，那就简单的送你</h6>
 				<h3 id="text-72" contenteditable="true">一直有我</h3>
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-54 center-img future-section future-page" data-id="__page-3">
-				<img src="a/4.jpeg" alt="happy birthday">
+				<img src="a/15.jpeg" alt="happy birthday">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-55 right-img future-section future-page" data-id="__page-4">
 				<img src="a/57.jpeg">
